final solution module 2

--- a/index.html
+++ b/index.html
@@ -1,9 +1,32 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta charset="utf-8">
+	<title>Module 2 solution</title>
+<link rel="stylesheet" href="css/style.css">
+
 </head>
 <body>
-
+<div class="row">
+<header>Our menu</header>
+	<div class="col col-lg-4 col-md-6 col-sm-12">
+		<div id="Chicken" class="content">
+			<h1>Chicken</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+		</div>
+	</div>
+	<div class="col col-lg-4 col-md-6 col-sm-12">
+		<div id="Beef" class="content">
+			<h1>Beef</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+		</div>
+	</div>
+	<div class="col col-lg-4 col-md-12 col-sm-12">
+		<div id="Sushi" class="content">
+			<h1>Sushi</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat</p>
+		</div>
+	</div>
+</div>
 </body>
 </html>
